[package]
name = "png_color_converter"
description = """Used for converting the hue of a given 16x16 png while retaining saturation and lightness.
Useful for converting minecraft textures to another color while retaining the shading / details."""
version = "0.1.0"
edition = "2021"
authors = ["Cade Warg"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cwarg/png_color_converter"
categories = ["command-line-utilities"]
keywords = ["images"]
exclude = [
    "resources/*",
    "resources/*",
]
    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
png = "0.17.11"
